--- a/css/style.css
+++ b/css/style.css
@@ -110,6 +110,69 @@ header .header-content .nav li a{
 .open.nav{
     transform: translateX(0);
 }
+/* -------------------------------------------------------------------------------------- */
+/* home */
+.home{
+    background-image: url(../img/hero.jpg);
+    background-size: cover;
+    height: 100vh;
+    width: 100%;
+    position: relative;
+}
+
+.home::before{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 60%);
+}
+
+.home-content{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 60%;
+    text-align: center;
+}
+
+.home-content .home-title{
+    color: var(--wh-color);
+    font-size: 3rem;
+    font-weight: normal;
+}
+@media (max-width: 767px){
+    .home-content .home-title{
+        font-size: 2rem;
+    }
+}
+
+.home-content .home-desc{
+    font-size: 1.7rem;
+    font-weight: normal;
+    padding: 1rem 0;
+    color: var(--wh-color);
+}
+@media (max-width: 767px){
+    .home-content .home-desc{
+        font-size: 1rem;
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
