--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,7 @@ header .header-content .logo .logo-title{
       position: absolute;
       top: 0;
       left: 0;
-      width: 21rem;
+      width: 100%;
       height: 100vh;
       background-color: var(--main-color);
       align-items: center;
