--- a/css/style.css
+++ b/css/style.css
@@ -7,8 +7,31 @@
     --main-transition: .5s;
 }
 
-body{
-    height: 1000px;
+img{
+    max-width: 100%;
+    height: 20rem;
+    border-radius: 1rem;
+}
+
+.mg-t{
+    margin-top: 7rem;
+}
+
+.section-heading{
+    text-align: center;
+    margin-bottom: 4rem;
+}
+.section-heading .section-heading-title{
+    margin-bottom: 1.5rem;
+    color: var(--main-color);
+    font-size: 4rem;
+}
+
+/*media for section-heading*/
+@media (max-width: 767px){
+    .section-heading .section-heading-desc{
+        line-height: 1.8;
+    }
 }
 
 a{
@@ -19,6 +42,7 @@ a{
 ul{
     list-style: none
 }
+
 /* ------------------------------------------------------------- */
 /* header */
 header{
@@ -165,10 +189,34 @@ header .header-content .nav li a{
         font-size: 1rem;
     }
 }
+/* ------------------------------------------------------------------------------------- */
+.about{
+    margin-top: 7rem;
+}
 
 
+ @media (min-width: 768px){
+    .about-content{
+       display: grid;
+       grid-template-columns: repeat(auto-fill, minmax(30rem, 1fr));
+       grid-gap: 3rem;
+       align-items: center;
+    }
+} 
+@media (max-width: 767px){
+    .about-content{
+       text-align: center;
+    }
+} 
 
+.about .about-content .about-item .about-title{
+    font-size: 2rem;
+}
 
+.about .about-content .about-item .about-desc{
+     line-height: 1.5;
+     font-size: 1.6rem;
+}
 
 
 
