--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,6 @@
 
 img{
     max-width: 100%;
-    height: 20rem;
     border-radius: 1rem;
 }
 
@@ -209,6 +208,10 @@ header .header-content .nav li a{
     }
 } 
 
+.about .about-content .about-item img{
+    margin-top: 1rem;
+}
+
 .about .about-content .about-item .about-title{
     font-size: 2rem;
 }
@@ -244,12 +247,19 @@ header .header-content .nav li a{
 @media(min-width: 768px){
     .services-content{
         display: grid;
-        grid-template-columns: repeat(auto-fill, minmax(30rem, 1fr));
+        grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
         grid-gap: 2rem;
     }
 }
 
+.services-content .services-item{
+    margin-bottom: 1.5rem;
+    transition: var(--main-transition);
+}
 
+.services-content .services-item:hover{
+    transform: scale(1.1);
+}
 
 
 
