--- a/css/style.css
+++ b/css/style.css
@@ -264,25 +264,23 @@ header .header-content .nav li a{
 /* ------------------------------------------------------------------------------------- */
 /* contact */
 .contact .map iframe{
-    width: 100%;
-    
- }
+    width: 100%;  
+}
+/* -------------------------------------------------------------------------------------- */
+footer{
+    background-color: var(--main-color);
+    padding: 2rem;
+}
 
-
-
-
-
-
-
-
-
-
-
+.footer-content{
+    text-align: center;
+    color: var(--wh-color);
+}
 
 /* ------------------------------------------------------------------------------------ */
 /* btn to up */
 .btn-up{
-    background-color: var(--main-color);
+    background-color: var(--second-color);
     color: var(--wh-color);
     border: none;
     position: fixed;
@@ -293,25 +291,4 @@ header .header-content .nav li a{
     cursor: pointer;
     display: none;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
