--- a/css/style.css
+++ b/css/style.css
@@ -48,100 +48,18 @@ ul{
 }
 
 /* ------------------------------------------------------------- */
-/* header */
-header{
-    width: 100%;
-    position: fixed;
-    z-index: 1000;
-    padding: 1.5rem;
-    
- }
-
-header .header-content{
-   display: flex;
-   justify-content: space-between;
-   align-items: center;
+/* nav */
+nav .navbar-brand{
+  color: var(--main-color);
 }
 
-header .header-content .logo{
-    z-index: 1000;
-}
-
-header .header-content .logo .logo-title{
-    color: var(--wh-color);
-}
-
-@media(max-width: 767px){
-    .header-content .nav{
-      display: block;
-      text-align: center;
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100vh;
-      background-color: var(--main-color);
-      align-items: center;
-      padding: 11rem 2rem;
-      transition: var(--main-transition) all cubic-bezier(0.075, 0.82, 0.165, 1);
-      transform: translateX(100%);
-      }
-} 
-
-header .header-content .nav li a{
-   display: inline-block;
-   padding: 1rem 2rem;
-   color: var(--wh-color);
-   font-size: 1rem;
-}
-@media(max-width: 767px){
-    .header-content .nav li a{
-      margin-bottom: 0.8rem;
-      
-    }
+nav .navbar-nav .nav-link:hover,
+nav .navbar-nav .nav-link.active{
+    color: var(--main-color);
 }
 
 
-.menu-icon{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    row-gap: 0.5rem;
-    cursor: pointer;
-    z-index: 4;
-    transition: var(--main-transition);
-}
-@media (min-width: 768px) {
-    .menu-icon{
-        display: none;
-    }
-}
 
-.menu-icon div{
-    display: block;
-    height: 0.2rem;
-    width: 2rem;
-    transition: var(--main-transition);
-    background-color: var(--wh-color);
-}
-
-
-.close .line1{
-    transform: rotate(-45deg) translate(-5px, 9px);
-}
-
-.close .line2{
-    opacity: 0;
-}
-
-.close .line3{
-    transform: rotate(45deg) translate(-5px, -9px);
-}
-
-.open.nav{
-    transform: translateX(0);
-}
 /* -------------------------------------------------------------------------------------- */
 /* home */
 .home{
@@ -286,7 +204,7 @@ footer{
     position: fixed;
     bottom: 2rem;
     right: 2rem;
-    padding: 2rem;
+    padding: 1rem;
     border-radius: 1rem;
     cursor: pointer;
     display: none;
